--- a/client/actions.jade
+++ b/client/actions.jade
@@ -2,3 +2,7 @@ template(name='view_profile')
     .ui.large.button.view_profile
         |view profile
     +user_info
+template(name='view_model')
+    .ui.large.button.view_model
+        |view model
+        i.external.icon
