--- a/client/client.jade
+++ b/client/client.jade
@@ -7,7 +7,7 @@ head
     meta(name="theme-color" content="#000000")
     link(rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.css')
     link(href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet")
-    //- link(href="https://fonts.googleapis.com/css?family=Lusitana:300,400&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Raleway:300,400&display=swap" rel="stylesheet")
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
     link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
@@ -18,7 +18,7 @@ head
     //- /* script(src='tablesort.js') */
     script(src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js")
     script(src='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.js')
-    script(src='https://cdn.jsdelivr.net/jsbarcode/3.6.0/JsBarcode.all.min.js')
+    //- /* script(src='https://cdn.jsdelivr.net/jsbarcode/3.6.0/JsBarcode.all.min.js') */
 
 template(name='layout')
     img.ui.fluid.image.checkin_banner(src="{{c.url 'frontrange' width=1000 height=1000 crop='crop'}}")
@@ -60,7 +60,7 @@ template(name='not_found')
 
 template(name='shortcut_modal')
     .ui.shortcut.modal
-        .ui.header shortcuts
+        .ui.header keyboard shortcuts
         .content
             .ui.large.list
                 each shortcuts
