--- a/client/users.jade
+++ b/client/users.jade
@@ -15,7 +15,7 @@ template(name='profiles')
             .sixteen.wide.column
                 .ui.left.icon.huge.fluid.input
                     i.search.icon
-                    input.username_search(type='text' placeholder='lookup resident...' autofocus='autofocus')
+                    input.username_search(type='text' placeholder='lookup profiles...' autofocus='autofocus')
                 .ui.centered.four.stackable.cards
                     each profiles
                         +profile
@@ -26,7 +26,7 @@ template(name='owners')
             .sixteen.wide.column
                 .ui.left.icon.huge.fluid.input
                     i.search.icon
-                    input.username_search(type='text' placeholder='lookup resident...' autofocus='autofocus')
+                    input.username_search(type='text' placeholder='lookup owner...' autofocus='autofocus')
                 .ui.centered.four.stackable.cards
                     each owners
                         +profile
