--- a/components/maintenance/healthclub.jade
+++ b/components/maintenance/healthclub.jade
@@ -6,19 +6,18 @@ template(name='kiosk_container')
 template(name='healthclub')
     //- img.ui.fluid.image.checkin_banner(src="{{c.url 'willow' width=1000 height=1000 crop='crop'}}")
     img.ui.fluid.image.checkin_banner(src="{{c.url 'frontrange' width=1000 height=600 crop='crop'}}")
-    .ui.grid.header-wrapper
+    .ui.padded.grid.header-wrapper
         //- +Template.dynamic template=kiosk_view
         .row
-            .sixteen.wide.center.aligned.column
+            .two.wide.center.aligned.column
                 img.ui.circular.centered.small.inline.image.shadowed(src="{{c.url 'gold_run_logo' }}")
-            .sixteen.wide.center.aligned.column
+            .fourteen.wide.center.aligned.column
                 .ui.massive.fluid.left.icon.input
-                    input.username_search(type='text' placeholder='resident first or last name' autofocus)
+                    input.username_search(type='text' placeholder='resident name' autofocus)
                     if is_query
                         i.remove.link.icon.clear_results
                     else 
                         i.user.grey.outline.icon
-        
         .row
             .sixteen.wide.column
                 .ui.grid
@@ -172,7 +171,6 @@ template(name='health_club_info')
                     .item
                         .content
                             .header Onsite Manager
-                            .description 
-                                div Rick Hamp 
-                                div 303-545-1787
-                                div goldruncondos@gmail.com
+                    .item Rick Hamp 
+                    .item 303-545-1787
+                    .item goldruncondos@gmail.com
