--- a/components/maintenance/signatures.jade
+++ b/components/maintenance/signatures.jade
@@ -42,7 +42,7 @@ template(name='rules_signing')
                 //-     else
                 //-         i.huge.circle.outline.grey.link.icon.agree
                 //- if agree
-                .ui.small.header by signing below you agree to the rules and regulations and acknolwedge receipt via a valid email address
+                .ui.small.header by signing below you agree to the rules and regulations and acknowledge receipt
                 if signature_saved
                     +signature_view key='signature' direct=true
                     if is_admin
@@ -95,7 +95,9 @@ template(name='add_guest')
             //- +text_edit key='first_name' label='First Name' direct=true
             //- +text_edit key='last_name' label='Last Name' direct=true
             +number_edit key='guest_phone' label='guest phone' direct=true
+            div
             +text_edit key='emergency_contact_name' label='emergency contact name' direct=true
+            div
             +number_edit key='emergency_contact_phone' label='emergency contact phone' direct=true
             if guest_name
                 if guest_phone
@@ -177,7 +179,7 @@ template(name='guidelines_signing')
                 //-     else
                 //-         i.huge.circle.outline.grey.link.icon.agree
                 //- if agree
-                .ui.small.header by signing below you agree to the member guidelines and acknolwedge receipt via a valid email address
+                .ui.small.header by signing below you agree to the member guidelines and acknowledge receipt
                 if signature_saved
                     +signature_view key='signature' direct=true
                     if is_admin
